Added more citations

--- a/MainMatter/Background.tex
+++ b/MainMatter/Background.tex
@@ -655,11 +655,11 @@ Construyendo un meta-modelo o \textit{meta-learner} $L$ podemos aprender relacio
 
 Los meta-modelos pueden ser usados para, dado un conjunto de meta-features $M$ y una nueva tarea $t_{new}$ generar un \textit{ranking} de las mejores $K$ configuraciones. Se obtiene así un conjunto prometedor de modelos con sus hiperparámetros para esta nueva tarea.
  
-Uno de los enfoques más populares es construir un meta-modelo de \textit{K-Nearest Neighbor} (kNN) para predecir las tareas que son similares, y luego rankear las mejores configuraciones en estas tareas similares [poner link de selection of time series..., ranking learning algorithms]. En estos trabajos se usan una evaluación multicriterio que toma en cuenta la precisión obtenida y el tiempo de entrenamiento de una configuración: \textit{Adjusted Ratio of Ratios} (ARR) o el Radio Ajustado de Radios (explicar) para formar los rankings. Existen muchas medidas para la evaluación de un ranking determinado, el más utilizado es el coeficiente de correlación de Spearman, el cual mide la distancia del ranking recomendando al ranking ideal. El ranking ideal corresponde al ordenamiento correcto de los modelos candidatos para una tarea determinada.
+Uno de los enfoques más populares es construir un meta-modelo de \textit{K-Nearest Neighbor} (kNN) para predecir las tareas que son similares, y luego rankear las mejores configuraciones en estas tareas similares \cite{santos2004selection, bradzil2003ranking}. En estos trabajos se usan una evaluación multicriterio que toma en cuenta la precisión obtenida y el tiempo de entrenamiento de una configuración: \textit{Adjusted Ratio of Ratios} (ARR) o el Radio Ajustado de Radios (explicar) para formar los rankings. Existen muchas medidas para la evaluación de un ranking determinado, el más utilizado es el coeficiente de correlación de Spearman, el cual mide la distancia del ranking recomendando al ranking ideal. El ranking ideal corresponde al ordenamiento correcto de los modelos candidatos para una tarea determinada.
  
-Meta-modelos especificamente destinados para ranking, como \textit{Predictive Clustering Trees} (PCTs) también han sido usados. Los PCTs son una generalización bien establecida de los árboles de decisión estándares, los cuales pueden ser usados para solucionar una variedad de tareas de predicción de modelos, estos permiten la predicción de múltiples variables de destino. Un solo predicting clustering tree tiene la habilidad de predecir el rendimiento de todos los algoritmos de aprendizaje a la vez. Por lo tanto, además de obtener un ranking, obtenemos una explicación para el mismo. Al igual que en otros trabajos, el coeficiente de correlación de Spearman es usado para medir el error entre los rankings.
+Meta-modelos especificamente destinados para ranking, como \textit{Predictive Clustering Trees} (PCTs) también han sido usados \cite{todorovski2002ranking}. Los PCTs son una generalización bien establecida de los árboles de decisión estándares, los cuales pueden ser usados para solucionar una variedad de tareas de predicción de modelos \cite{tomaz2020oblique}, estos permiten la predicción de múltiples variables de destino. Un solo predicting clustering tree tiene la habilidad de predecir el rendimiento de todos los algoritmos de aprendizaje a la vez. Por lo tanto, además de obtener un ranking, obtenemos una explicación para el mismo. Al igual que en otros trabajos, el coeficiente de correlación de Spearman es usado para medir el error entre los rankings.
  
-Los \textit{Aproximate Ranking Trees Forest} (\textit{ART Forest}) son \textit{ensembles} de árboles de ranking rápidos que han probado ser especialmente efectivos, ya que ellos tienen `incorporados' la selección de meta-features, funcionan bien incluso si hay pocas tareas disponibles y el \textit{ensembling} hace el método más robusto.
+Los \textit{Aproximate Ranking Trees Forest} (\textit{ART Forest}) \cite{sun2013pairwise} son \textit{ensembles} de árboles de ranking rápidos que han probado ser especialmente efectivos, ya que ellos tienen `incorporados' la selección de meta-features, funcionan bien incluso si hay pocas tareas disponibles y el \textit{ensembling} hace el método más robusto.
 
 
 \quad
@@ -696,9 +696,9 @@ Si el rendimiento de un algoritmo necesita ser predecido para un nuevo dataset, 
 
 Una las principales desventajas de este enfoque de regresión, es que para cada algoritmo destino es entrenado un modelo diferente de regresión. Esto puede consumir gran cantidad de tiempo, especialmente cuando una optimización de hiperparámetros exhaustiva para los meta-modelos es realizada. Sin embargo, modelos separados simplifican el proceso de añadir y eliminar algoritmos destinos. Además, esto permite que se fácil el entrenamiento de diferentes variantes de un mismo algoritmo. 
 
-Los SVM han sido entrenados como meta-regresores de algoritmos de clasificación para predecir su precisión. En una versión de esto se usan las configuraciones por defecto de los algoritmos, y para una nueva tarea $t_{new}$ dada sus meta-features se predice el resultado  [poner link de SVm como meta-regressors]. En este trabajo los experimentos fueron llevados a cabo prediciendo el rendimiento de distintas redes de \textit{Multi-Layer Perceptron} (MLP). Los SVMs fueron aplicados con diferentes funciones kernel para predecir el valor del \textit{Normalized Mean of Squared Errors} (NMSE) o Error Cuadrático Medio Normalizado de los MLPs
+Los SVM han sido entrenados como meta-regresores de algoritmos de clasificación para predecir su precisión. En una versión de esto se usan las configuraciones por defecto de los algoritmos, y para una nueva tarea $t_{new}$ dada sus meta-features se predice el resultado \cite{guerra2008predicting}. En este trabajo los experimentos fueron llevados a cabo prediciendo el rendimiento de distintas redes de \textit{Multi-Layer Perceptron} (MLP). Los SVMs fueron aplicados con diferentes funciones kernel para predecir el valor del \textit{Normalized Mean of Squared Errors} (NMSE) o Error Cuadrático Medio Normalizado de los MLPs
 
-Posteriormente, se entrenó un meta-regresor similar [poner link de automatic classifier selection...] para predecir el rendimiento \textit{optimizado} de un mayor número de algoritmos de clasificación. En este trabajo el parámetro más importante de cada algoritmo fue optimizado en orden de obtener un rendimiento más realista y por lo tanto una mejor evaluación. Para una evaluación más exhaustiva, el \textit{root mean squared error} (RMSE) y el coeficiente de correlación de Pearson \textit{Pearson product-moment correlation coeficient} (PMCC) fue usado como medida de rendimiento. RMSE tiene la ventaja de proveer un intervalo de confianza junto con la predicción, mientras PMCC también puede medir derivaciones relativas Además se realiza una selección automática de características que es aplicada dos veces de acuerdo a ambas las medidas de rendimiento e independientemente para cada clasificador. Los resultados son comparados para cada de los distintos grupos de meta-features así como el conjunto completo de meta-features.
+Posteriormente, se entrenó un meta-regresor similar \cite{reif2012automatic} para predecir el rendimiento \textit{optimizado} de un mayor número de algoritmos de clasificación. En este trabajo el parámetro más importante de cada algoritmo fue optimizado en orden de obtener un rendimiento más realista y por lo tanto una mejor evaluación. Para una evaluación más exhaustiva, el \textit{root mean squared error} (RMSE) y el coeficiente de correlación de Pearson \textit{Pearson product-moment correlation coeficient} (PMCC) fue usado como medida de rendimiento. RMSE tiene la ventaja de proveer un intervalo de confianza junto con la predicción, mientras PMCC también puede medir derivaciones relativas Además se realiza una selección automática de características que es aplicada dos veces de acuerdo a ambas las medidas de rendimiento e independientemente para cada clasificador. Los resultados son comparados para cada de los distintos grupos de meta-features así como el conjunto completo de meta-features.
 
 \quad
 
