--- a/references.bib
+++ b/references.bib
@@ -489,3 +489,72 @@
 	year={2018},
 	volume={abs/1808.10406}
 }
+
+@inproceedings{santos2004selection,
+	author = {Santos, Patrícia and Ludermir, Teresa and Prudêncio, Ricardo},
+	year = {2004},
+	month = {01},
+	pages = {366-371},
+	title = {Selection of Time Series Forecasting Models based on Performance Information},
+	journal = {Proceedings - HIS'04: 4th International Conference on Hybrid Intelligent Systems},
+	doi = {10.1109/ICHIS.2004.86}
+}
+
+@article{bradzil2003ranking,
+	author = {Brazdil, Pavel and Soares, Carlos and Costa, Joaquim},
+	year = {2003},
+	month = {03},
+	pages = {251-277},
+	title = {Ranking Learning Algorithms: Using IBL and Meta-Learning on Accuracy and Time Results},
+	volume = {50},
+	journal = {Machine Learning},
+	doi = {10.1023/A:1021713901879}
+}
+
+@inproceedings{todorovski2002ranking,
+	author = {Todorovski, Ljupco and Blockeel, Hendrik and Džeroski, Sašo},
+	year = {2002},
+	month = {08},
+	pages = {444-455},
+	title = {Ranking with Predictive Clustering Trees},
+	volume = {2430},
+	isbn = {978-3-540-44036-9},
+	doi = {10.1007/3-540-36755-1_37}
+}
+
+@article{tomaz2020oblique,
+	author    = {Tomaz Stepisnik and
+	Dragi Kocev},
+	title     = {Oblique Predictive Clustering Trees},
+	journal   = {CoRR},
+	volume    = {abs/2007.13617},
+	year      = {2020},
+	url       = {https://arxiv.org/abs/2007.13617},
+	eprinttype = {arXiv},
+	eprint    = {2007.13617},
+	timestamp = {Wed, 29 Jul 2020 15:36:39 +0200},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-2007-13617.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{guerra2008predicting,
+	author = {Guerra, Silvio and Prudencio, Ricardo and Ludermir, Teresa},
+	year = {2008},
+	month = {09},
+	pages = {523-532},
+	title = {Predicting the Performance of Learning Algorithms Using Support Vector Machines as Meta-regressors},
+	volume = {5163},
+	isbn = {978-3-540-87535-2},
+	doi = {10.1007/978-3-540-87536-9_54}
+}
+
+@article{reif2012automatic,
+	author = {Reif, Matthias and Shafait, Faisal and Goldstein, Markus and Breuel, Thomas and Dengel, Andreas},
+	year = {2012},
+	month = {02},
+	pages = {},
+	title = {Automatic Classifier Selection for Non-Experts},
+	volume = {17},
+	journal = {Pattern Analysis and Applications},
+	doi = {10.1007/s10044-012-0280-z}
+}
